--- a/SeeCorrectMake/Nettsiden/src/index.css
+++ b/SeeCorrectMake/Nettsiden/src/index.css
@@ -77,260 +77,263 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
     height: 100vh;
 }
 /*---------------------------------------------------------------------------------------*/
-/*Første hovedside*/
-    .sideSlide1 {
-        background-color: rgb(176, 211, 238);
-    }
-/*bakgrunnsbilde*/
-        .img1 {
-            height: 100vh;
-            width: 100vw;
-            opacity: 0.4;
-        }
-/*DIV-elemente med skriften på hovedsiden*/
-        .hovedskrift {
-            left: 30vw;
+        /*Første hovedside*/
+            .sideSlide1 {
+                background-color: rgb(176, 211, 238);
+            }
+        /*bakgrunnsbilde*/
+                .img1 {
+                    height: 100vh;
+                    width: 100vw;
+                    opacity: 0.4;
+                }
+        /*DIV-elemente med skriften på hovedsiden*/
+                .hovedskrift {
+                    left: 30vw;
+                    position: absolute;
+                    top: 10vh;
+                    font-family: Arial, serif;
+                    color: indigo;
+
+                }
+            /*Skriften som skal være større*/
+                    .span {
+                        font-weight: bolder;
+                        font-size: 10vh;
+                        letter-spacing: .2vh;
+                    }
+                /*skriften som varierer ord*/
+                        .dynamicOrd {
+                            display: inline;
+                            -webkit-animation: fadeIn ease 3s infinite;
+                        }
+                        @-webkit-keyframes fadeIn {
+                            0% {
+                                opacity:0;
+                            }
+                            10% {
+                                opacity: .2;
+                            }
+                            20% {
+                                opacity: .4;
+                            }
+                            30% {
+                                opacity: .6;
+                            }
+                            40% {
+                                opacity: 8;
+                            }
+                            50% {
+                                opacity: 1;
+                            }
+                            60% {
+                                opacity: .8;
+                            }
+                            70% {
+                                opacity: .6;
+                            }
+                            80% {
+                                opacity: .4;
+                            }
+                            90% {
+                                opacity: .2;
+                            }
+                            100% {
+                                opacity:0;
+                            }}
+        /*DEGREE dropdown div*/
+        .degreeDrop {
+            display: block;
+            padding: 16px 8px;
+            border-bottom: 3px solid indigo;
             position: absolute;
-            top: 10vh;
-            font-family: Arial, serif;
+            left: 30vw;
+            top: 50vh;
+            cursor: pointer;
             color: indigo;
-
+            font-weight: bold;
         }
-    /*Skriften som skal være større*/
-            .span {
-                font-weight: bolder;
-                font-size: 10vh;
-                letter-spacing: .2vh;
+        /*dropdown pilen*/
+            .degree-pil {
+                float: right;
+                margin-left: 10px;
             }
-        /*skriften som varierer ord*/
-                .dynamicOrd {
-                    display: inline;
-                    -webkit-animation: fadeIn ease 3s infinite;
-                }
-                @-webkit-keyframes fadeIn {
-                    0% {
-                        opacity:0;
-                    }
-                    10% {
-                        opacity: .2;
-                    }
-                    20% {
-                        opacity: .4;
-                    }
-                    30% {
-                        opacity: .6;
-                    }
-                    40% {
-                        opacity: 8;
-                    }
-                    50% {
-                        opacity: 1;
-                    }
-                    60% {
-                        opacity: .8;
-                    }
-                    70% {
-                        opacity: .6;
-                    }
-                    80% {
-                        opacity: .4;
-                    }
-                    90% {
-                        opacity: .2;
-                    }
-                    100% {
-                        opacity:0;
-                    }}
-/*DEGREE dropdown div*/
-.degreeDrop {
-    display: block;
-    padding: 16px 8px;
-    border-bottom: 3px solid indigo;
-    position: absolute;
-    left: 30vw;
-    top: 50vh;
-    cursor: pointer;
-    color: indigo;
-    font-weight: bold;
-}
-/*dropdown pilen*/
-    .degree-pil {
-        float: right;
-        margin-left: 10px;
-    }
-/*Dropdown div studier*/
-        .theDegreesDropdown {
-            text-decoration: none;
-            position: absolute;
-            left: 30vw;
-            top: 57vh;
-            text-align: center;
-            width: 37.6vh;
-            height: 43vh;
-            color: white;
-            z-index: 1;
-            overflow: auto;
-            cursor: pointer;
-        }
-        /*Dropdown alle studiene*/
-            .theDegrees {
-                padding: 10px;
-                display: block;
-                background: indigo;
-                opacity: .7;
-            }
-                .theDegrees:hover {
-                    transform: scale(1.3);
-                    transition: transform 0.1s;
-                    opacity: 1;
-                }
-/*---------------------------------------------------------------------------------------*/
-/*DIV-elementene rundt pilene. Kunne ikke gjøre alle sammen, da de ble liggende oppå hverandre og ikke ved riktig sted*/
-        .arrowRight {
-            width: 7vw;
-            height: 10vh;
-            background-color: white;
-            opacity: 0.5;
-            position: absolute;
-            right: 0;
-            top: 42vh;
-            cursor: pointer;
-            z-index: 1;
-        }
-        .arrowRight1 {
-            width: 7vw;
-            height: 10vh;
-            background-color: white;
-            opacity: 0.5;
-            position: absolute;
-            left: 193vw;
-            top: 42vh;
-            cursor: pointer;
-        }
-        .arrowLeft {
-            width: 7vw;
-            height: 10vh;
-            background-color: white;
-            opacity: 0.5;
-            position: absolute;
-            left: 193vw;
-            top: 52vh;
-            cursor: pointer;
-        }
-        .arrowLeft1 {
-            width: 7vw;
-            height: 10vh;
-            background-color: white;
-            opacity: 0.5;
-            position: absolute;
-            left: 293vw;
-            top: 52vh;
-            cursor: pointer;
-        }
-/*Pil-ikonene*/
-            i[class^="slide "]{
-                position: absolute;
-                margin-top: 3.8vh;
-                margin-left: 3vw;
-                color: indigo;
-            }
-/*---------------------------------------------------------------------------------------*/
-/*Hele nedre info-meny*/
-        .nedreMeny {
-            margin-left: 20vw;
-            width: 80vw;
-            height: 21vh;
-            display: flex;
-            flex-direction: row;
-            position: absolute;
-            z-index: 0;
-            bottom: 0;
-            text-align: center;
-        }
-/*---------------------------------------------------------------------------------------*/
-/*Venstre nedre info-meny*/
-            .nedreMenyInfo1 {
-                background-color: rgb(248, 248, 248);
-                width: 40vw;
-                color: rgb(68, 58, 54);
-            }
-/*Overskrift announcements*/
-                .info1Overskrift {
-                   position: relative;
-                    top: 7px;
-                }
-/*Container som inneholder all informativ tekst*/
-                .infoSlideShow{
-                    position: relative;
-                }
-/*de to info-skrivene nede til venstre*/
-                .slide1 , .slide2 {
-                    float: left;
-                    margin-top: 4vh;
-                    margin-left: 1vw;
-                    position: relative;
-                }
-/*PIL til høyre og venstre*/
-                    i[class^="infoPil"]{
-                        font-weight: bolder;
-                        cursor: pointer;
-                        float: right;
-                        margin-top: 7vh;
-                        height: 3vh;
-                        width: 3vw;
-                        padding: 5px;
-                        background-color: rgb(54, 54, 60);
-                        color: white;
-                    }
-/*Begge pilene kommer "ut" når man har pil over hver enkelt*/
-                i[class^="infoPil"]:hover {
-                    transform: scale(1.2);
-                    transition: transform 0.1s;
-                }
-/*---------------------------------------------------------------------------------------*/
-/*Midtre infomeny*/
-            .nedreMenyInfo2 {
-                background-color: rgb(160, 198, 98);
-                width: 18vw;
-            }
-
-/*---------------------------------------------------------------------------------------*/
-/*Høyre infomeny*/
-            .nedreMenyInfo3 {
-                background-color: rgb(168, 18, 44);
-                width: 40vw;
-            }
-/*Overskrift infomeny nede til høyre*/
-                .info3Overskrift {
-                    position: relative;
-                    top: 7px;
+        /*Dropdown div studier*/
+                .theDegreesDropdown {
+                    text-decoration: none;
+                    position: absolute;
+                    left: 30vw;
+                    top: 57vh;
+                    text-align: center;
+                    width: 37.6vh;
+                    height: 43vh;
                     color: white;
-                    font-weight: bolder;
+                    z-index: 1;
+                    overflow: auto;
+                    cursor: pointer;
                 }
-/*de to tekst-divene nede til høyre*/
-                    .slide3, .slide4 {
-                        float: left;
-                        margin-top: 4vh;
-                        margin-left: 1vw;
-                        color: white;
-                        position: relative;
+                /*Dropdown alle studiene*/
+                    .theDegrees {
+                        padding: 10px;
+                        display: block;
+                        background: indigo;
+                        opacity: .7;
                     }
-/*PIL til høyre og venstre*/
-                    i[class^="pilInfo"]{
-                        font-weight: bolder;
-                        cursor: pointer;
-                        float: right;
-                        margin-top: 7vh;
-                        height: 3vh;
-                        width: 3vw;
-                        padding: 5px;
-                        color: white;
+                        .theDegrees:hover {
+                            transform: scale(1.3);
+                            transition: transform 0.1s;
+                            opacity: 1;
+                        }
+/*---------------------------------------------------------------------------------------*/
+        /*DIV-elementene rundt pilene. Kunne ikke gjøre alle sammen, da de ble liggende oppå hverandre og ikke ved riktig sted*/
+                .arrowRight {
+                    width: 7vw;
+                    height: 10vh;
+                    background-color: white;
+                    opacity: 0.5;
+                    position: absolute;
+                    right: 0;
+                    top: 42vh;
+                    cursor: pointer;
+                    z-index: 1;
+                }
+                .arrowRight1 {
+                    width: 7vw;
+                    height: 10vh;
+                    background-color: white;
+                    opacity: 0.5;
+                    position: absolute;
+                    left: 193vw;
+                    top: 42vh;
+                    cursor: pointer;
+                    z-index: 1;
+                }
+                .arrowLeft {
+                    width: 7vw;
+                    height: 10vh;
+                    background-color: white;
+                    opacity: 0.5;
+                    position: absolute;
+                    left: 193vw;
+                    top: 52vh;
+                    cursor: pointer;
+                    z-index: 1;
+                }
+                .arrowLeft1 {
+                    width: 7vw;
+                    height: 10vh;
+                    background-color: white;
+                    opacity: 0.5;
+                    position: absolute;
+                    left: 293vw;
+                    top: 52vh;
+                    cursor: pointer;
+                    z-index: 1;
+                }
+        /*Pil-ikonene*/
+                    i[class^="slide "]{
+                        position: absolute;
+                        margin-top: 3.8vh;
+                        margin-left: 3vw;
+                        color: indigo;
                     }
-/*Begge pilene kommer "ut" når man har pil over hver enkelt*/
-                    i[class^="pilInfo"]:hover {
-                        transform: scale(1.5);
-                        transition: transform 0.1s;
+/*---------------------------------------------------------------------------------------*/
+        /*Hele nedre info-meny*/
+                .nedreMeny {
+                    margin-left: 20vw;
+                    width: 80vw;
+                    height: 21vh;
+                    display: flex;
+                    flex-direction: row;
+                    position: absolute;
+                    z-index: 0;
+                    bottom: 0;
+                    text-align: center;
+                }
+/*---------------------------------------------------------------------------------------*/
+        /*Venstre nedre info-meny*/
+                    .nedreMenyInfo1 {
+                        background-color: rgb(248, 248, 248);
+                        width: 40vw;
+                        color: rgb(68, 58, 54);
                     }
+        /*Overskrift announcements*/
+                        .info1Overskrift {
+                           position: relative;
+                            top: 7px;
+                        }
+        /*Container som inneholder all informativ tekst*/
+                        .infoSlideShow{
+                            position: relative;
+                        }
+        /*de to info-skrivene nede til venstre*/
+                        .slide1 , .slide2 {
+                            float: left;
+                            margin-top: 4vh;
+                            margin-left: 1vw;
+                            position: relative;
+                        }
+        /*PIL til høyre og venstre*/
+                            i[class^="infoPil"]{
+                                font-weight: bolder;
+                                cursor: pointer;
+                                float: right;
+                                margin-top: 7vh;
+                                height: 3vh;
+                                width: 3vw;
+                                padding: 5px;
+                                background-color: rgb(54, 54, 60);
+                                color: white;
+                            }
+        /*Begge pilene kommer "ut" når man har pil over hver enkelt*/
+                        i[class^="infoPil"]:hover {
+                            transform: scale(1.2);
+                            transition: transform 0.1s;
+                        }
+/*---------------------------------------------------------------------------------------*/
+        /*Midtre infomeny*/
+                    .nedreMenyInfo2 {
+                        background-color: rgb(160, 198, 98);
+                        width: 18vw;
+                    }
+
+/*---------------------------------------------------------------------------------------*/
+        /*Høyre infomeny*/
+                    .nedreMenyInfo3 {
+                        background-color: rgb(168, 18, 44);
+                        width: 40vw;
+                    }
+        /*Overskrift infomeny nede til høyre*/
+                        .info3Overskrift {
+                            position: relative;
+                            top: 7px;
+                            color: white;
+                            font-weight: bolder;
+                        }
+        /*de to tekst-divene nede til høyre*/
+                            .slide3, .slide4 {
+                                float: left;
+                                margin-top: 4vh;
+                                margin-left: 1vw;
+                                color: white;
+                                position: relative;
+                            }
+        /*PIL til høyre og venstre*/
+                            i[class^="pilInfo"]{
+                                font-weight: bolder;
+                                cursor: pointer;
+                                float: right;
+                                margin-top: 7vh;
+                                height: 3vh;
+                                width: 3vw;
+                                padding: 5px;
+                                color: white;
+                            }
+        /*Begge pilene kommer "ut" når man har pil over hver enkelt*/
+                            i[class^="pilInfo"]:hover {
+                                transform: scale(1.5);
+                                transition: transform 0.1s;
+                            }
 /*---------------------------------------------------------------------------------------*/
 /*Midtre hovedside*/
     .sideSlide2 {
@@ -390,7 +393,7 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
                     background: rgb(248, 248, 248);
                 }
                 div[class^="cards2"] {
-                    background: rgb(240, 240, 240);
+                    background: lightgrey /*rgb(240, 240, 240)*/;
                 }
                 /*ikoner og skrift*/
                 i[class^="cards"]{
@@ -409,6 +412,7 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
 }
     .baksideFlip1 {
     background-color: indigo;
+        opacity: .5;
     color: white;
     transform: rotateY(180deg);
     letter-spacing: 1px;
@@ -537,7 +541,14 @@ div[class^="sideSlide"] { /*Velger alle div-klassene som starter med sideSlide*/
     .slide2sideBildet {
         width: 30vw;
         height: 100vh;
+        background-color: indigo;
     }
+        /*Bilde side 2 til høyre*/
+        .slide2pic {
+            height: 100%;
+            width: 100%;
+            opacity: 0.6;
+        }
 
 /*---------------------------------------------------------------------------------------*/
 /*Høyre hovedside*/
